--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -1,19 +1,23 @@
 name: Build Flutter APK
 
 on:
-  workflow_dispatch:
+  workflow_dispatch: # run manually from Actions tab
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+      
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.22.0' # or stable
+          flutter-version: '3.22.0' # you can change to "stable"
+
       - run: flutter pub get
       - run: flutter build apk --release
-      - uses: actions/upload-artifact@v3
+
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
         with:
           name: release-apk
           path: build/app/outputs/flutter-apk/app-release.apk
