--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -1,7 +1,7 @@
 name: Build Flutter APK
 
 on:
-  workflow_dispatch: # run manually from Actions tab.
+  workflow_dispatch: # run manually from Actions tab
 
 jobs:
   build:
@@ -11,7 +11,7 @@ jobs:
       
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.22.0' # you can change to "stable"
+          flutter-version: '3.35.3' # newer version with Dart >=3.5
 
       - run: flutter pub get
       - run: flutter build apk --release
